--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,11 @@ html {
 }
 
 .dot-experiment {
+  position: realtive;
   background: lightgreen;
   margin: 0 auto;
   font-size: 1.5rem;
-  height: 100%;
-  min-height: 100vh;
+  height: 500vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,5 +34,9 @@ html {
 }
 
 canvas {
-  background: darkslateblue;
+  background: rgb(19, 5, 68);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
